Fix cutoff outline on :focus-visible for buttons

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -177,7 +177,7 @@ select {
 
 *:focus-visible {
   outline: 2px double var(--clr-warn-5);
-  outline-offset: 2px;
+  z-index: 0;
 }
 
 input {
